# crm

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  generate_icons.py  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.typecheck.json  vite.config.ts
MietparkCRM/App/: MietparkCRMApp.swift
MietparkCRM/Bridge/: BridgeMessages.swift  WebBridge.swift
MietparkCRM/Persistence/: FileStore.swift  LocalStore.swift
MietparkCRM/Security/: KeychainService.swift
MietparkCRM/Sync/: CloudKitSyncService.swift
MietparkCRM/WebHost/: WebAssetLoader.swift  WebViewContainer.swift
docs/: architecture.md  bridge-contract.md
docs/desktop-migration/: roadmap.md
docs/plans/: 2026-04-06-finanz-dashboard-design.md  2026-04-06-finanz-dashboard.md  2026-04-06-icloud-sync.md  2026-04-07-belegnummer-workflow-fix.md
scripts/: build-health.sh  check-payment-duplicates.sh  install-built-app.sh  migrate-from-old-browser.js  sync-web-build.sh  tauri-build.mjs  tauri-dev.mjs
scripts/ci/: check-doc-sync.sh  release_latest_macos.sh
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  contacts.rs  crm.rs  database.rs  google_oauth.rs  health.rs  icon.rs  mod.rs  print.rs
src-tauri/src/database/: documents.rs  init.rs  mod.rs  repository.rs  schema.rs
src-tauri/src/security/: keychain.rs
src-tauri/src/services/: mod.rs
src-tauri/src/services/auth/: google.rs
src-tauri/src/services/backup/: icloud.rs  mod.rs  providers.rs
src-tauri/src/services/calendar/: google_calendar.rs
src/components/: AnalysisResult.tsx  AppShell.tsx  AutoSaveIndicator.tsx  CalendarPanel.tsx  CatalogPage.tsx  ConfiguratorList.tsx  ConfirmModal.tsx  ContactSyncSettings.tsx  CustomerDocumentsModal.tsx  CustomerEmailHistoryModal.tsx  CustomerForm.tsx  CustomerList.tsx  DashboardPanel.tsx  EinnahmenUeberschussRechnung.tsx  HistoryPage.tsx  Inbox.tsx  InventoryList.tsx  InvoiceEditor.tsx  InvoiceLineItems.tsx  InvoiceList.tsx  InvoiceWorkflowBar.tsx  KanbanBoard.tsx  KanbanCard.tsx  MessageBox.test.tsx  MessageBox.tsx  MessageToRentalWorkflow.tsx  PriceManagement.tsx  (+10 more)
(+80 files in other folders)
