[package]
name = "mietpark-crm-desktop"
version = "0.3.8"
description = "Desktop-App fuer Mietpark CRM"
authors = ["Daniel Brussig"]
edition = "2021"

[lib]
name = "mietpark_crm_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"] }
oauth2 = "5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-opener = "2.0.0"
tauri-plugin-process = "2.0.0"
tauri-plugin-updater = "2.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
